# crfb

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  make.sh  result.txt
3dparty/: CMakeLists.txt
examples/: CMakeLists.txt  example_0.c  example_1.c  example_2.c
src/: CMakeLists.txt
src/crfb/: CMakeLists.txt  crfb.c  crfb.h  crfb_backend.h  crfb_capability.c  crfb_capability.h  crfb_client.c  crfb_client.h  crfb_client_init.c  crfb_client_init.h  crfb_client_to_server_messages.c  crfb_client_to_server_messages.h  crfb_encoding.c  crfb_encoding.h  crfb_frame_buffer.c  crfb_frame_buffer.h  crfb_logger.c  crfb_logger.h  crfb_pixel_format.c  crfb_pixel_format.h  crfb_rectangle.c  crfb_rectangle.h  crfb_result.h  crfb_security_result.c  crfb_security_result.h  crfb_security_types.c  crfb_security_types.h  crfb_server_init.c  crfb_server_init.h  crfb_server_to_client_messages.c  crfb_server_to_client_messages.h  crfb_tight_security_type.c  crfb_tight_security_type.h  crfb_utils.c  crfb_utils.h  crfb_version.c  crfb_version.h
src/crfp/: CMakeLists.txt  crfp.c  crfp.h  crfp_client.h
